# cleanser

./: .gitignore  CHANGELOG.md  Cargo.toml  HOMEBREW_TAP.md  README.md  RELEASE.md  install.sh  uninstall.sh
.github/workflows/: bottle.yml  ci.yml  release.yml
Formula/: cleanser.rb
src/: cache.rs  cleaner.rs  main.rs  scanner.rs  types.rs
