[package]
name = "cleanser"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique"]
description = "A fast CLI tool for clearing macOS storage space"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
humansize = "2.1"
rayon = "1.8"
anyhow = "1.0"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1.10"
indicatif = "0.17"
